Migrate code to work with Java 9.
1) Use MouseEvent.BUTTON instead of InputEvent.BUTTON_MASK.
2) Rework JavaNativeCompiler to use a single classloader to load compiled
classes.
3) Small changes here and there to adopt new changes and restrictions in
java 9.