@@ -3,7 +3,6 @@ package core.languageHandler.compiler;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -32,6 +31,11 @@ import javax.tools.JavaFileObject;
 import javax.tools.StandardJavaFileManager;
 import javax.tools.ToolProvider;
 
+import argo.jdom.JsonNode;
+import argo.jdom.JsonNodeFactories;
+import core.languageHandler.Language;
+import core.userDefinedTask.DormantUserDefinedTask;
+import core.userDefinedTask.UserDefinedAction;
 import utilities.FileUtility;
 import utilities.Function;
 import utilities.JSONUtility;
@@ -39,15 +43,10 @@ import utilities.Pair;
 import utilities.RandomUtil;
 import utilities.StringUtilities;
 import utilities.swing.SwingUtil;
-import argo.jdom.JsonNode;
-import argo.jdom.JsonNodeFactories;
-import core.languageHandler.Language;
-import core.userDefinedTask.DormantUserDefinedTask;
-import core.userDefinedTask.UserDefinedAction;
 
 public class JavaNativeCompiler extends AbstractNativeCompiler {
 
-	private static URLClassLoader classLoader;
+	private DynamicClassLoader classLoader;
 
 	private final String[] packageTree;
 	private final String defaultClassName;
@@ -61,6 +60,7 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 		this.defaultClassName = className;
 		this.classPaths = classPaths;
 
+		classLoader = new DynamicClassLoader(getClassPaths(), ClassLoader.getSystemClassLoader());
 		home = new File(System.getProperty("java.home"));
 	}
 
@@ -93,6 +93,9 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 	@Override
 	public Pair<DynamicCompilerOutput, UserDefinedAction> compile(String sourceCode) {
 		String originalPath = System.getProperty("java.home");
+		// This no longer works in JDK 9 (but why?).
+		// We are forced to run the program in JDK in order to be
+		// able to retrieve the compiler.
 		System.setProperty("java.home", home.getAbsolutePath());
 
 		if (!sourceCode.contains("class " + defaultClassName)) {
@@ -116,8 +119,8 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 	                }
 
 	                /** Compilation Requirements *********************************************************************************************/
-	                DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<JavaFileObject>();
-	                JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+					DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<JavaFileObject>();
+					JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
 	                if (compiler == null) {
 	                	getLogger().warning("No java compiler found. Set class path points to JDK in setting?");
 	                	return new Pair<DynamicCompilerOutput, UserDefinedAction>(DynamicCompilerOutput.COMPILER_MISSING, new DormantUserDefinedTask(sourceCode));
@@ -168,16 +171,39 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 	}
 
 	private Pair<DynamicCompilerOutput, UserDefinedAction> loadClass(String loadClassName) throws ClassNotFoundException, InstantiationException, IllegalAccessException, IOException {
-		classLoader = new URLClassLoader(new URL[]{new File("./").toURI().toURL()});
-
+		classLoader.addURL(new File("./").toURI().toURL());
         Class<?> loadedClass = classLoader.loadClass(StringUtilities.join(packageTree, ".") + "." + loadClassName);
-        Object object = loadedClass.newInstance();
+        Object object = null;
+		try {
+			object = loadedClass.getDeclaredConstructor().newInstance();
+		} catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+			getLogger().log(Level.WARNING, "Unable to create a new instance...", e);
+			return new Pair<DynamicCompilerOutput, UserDefinedAction>(DynamicCompilerOutput.CONSTRUCTOR_ERROR, null);
+		}
 
         getLogger().log(Level.FINE, "Successfully loaded class " + loadClassName);
-        classLoader.close();
         UserDefinedAction output = (UserDefinedAction) object;
         output.setSourcePath(getSourceFile(loadClassName).getAbsolutePath());
         return new Pair<DynamicCompilerOutput, UserDefinedAction>(DynamicCompilerOutput.COMPILATION_SUCCESS, output);
+	}
+
+	/**
+	 * Construct an array of URLs from array of string representing list of
+	 * class paths.
+	 *
+	 * @return array of URLs representing the class paths.
+	 */
+	private URL[] getClassPaths() {
+		List<URL> output = new ArrayList<>();
+		for (String path : classPaths) {
+			try {
+				output.add(new File(path).toURI().toURL());
+			} catch (MalformedURLException e) {
+				getLogger().log(Level.WARNING, "Unable to construct URL for classpath " + path, e);
+			}
+		}
+
+		return output.toArray(new URL[output.size()]);
 	}
 
 	@Override
@@ -257,15 +283,14 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 	}
 
 	/**
-	 * Add all {@link #classPaths} on the current list of classpath to the system class loader. This introduces two limitations:
-	 * 1) There is no way to remove a class path that was added in the past.
-	 * 2) Contamination of the system class loader.
+	 * Add all {@link #classPaths} on the current list of classpath to this compiler class loader.
+	 * All classes compiled by this compiler will therefore be able to load all classes in {@link #classpaths}.
+	 * There is a limitation that this contaminate the classpath in the class loader used by this compiler
+	 * since the compiler reuses the class loader for all compilation task.
 	 *
-	 * Alternatively, we could spawn a temporary classloader that contains these paths for each user defined task instantiation.
-	 * This would require refactoring the compilation process to wrap the compiled action execution within this temporary classloader
-	 * creation process.
-	 *
-	 * Update: The proposed alternative above did not work. Somehow {@link Thread#setContextClassLoader} did not work as expected.
+	 * Alternatively, we could spawn a temporary class loader for each compilation task and not close it after loading
+	 * so that the compiled task can load classes. However, it is not sure whether Java garbage collection can recycle
+	 * this temporary class loader once the compiled task is discarded.
 	 *
 	 * @throws MalformedURLException
 	 * @throws SecurityException
@@ -274,13 +299,39 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 	 * @throws IllegalArgumentException
 	 * @throws IllegalAccessException
 	 */
-	private void applyClassPath() throws MalformedURLException, NoSuchMethodException, SecurityException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+	public void applyClassPath() throws MalformedURLException, NoSuchMethodException, SecurityException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
 		// Hacky reflection solution to alter the global classpath.
-		Method method = URLClassLoader.class.getDeclaredMethod("addURL", new Class[]{URL.class});
-	    method.setAccessible(true);
-	    for (String path : classPaths) {
-	    	method.invoke(ClassLoader.getSystemClassLoader(), new Object[]{new File(path).toURI().toURL()});
-	    }
+		// This no longer works for JDK 9 since system class loader is no longer a URLClassLoader.
+		// JDK 9 also emits warnings as reflection package tries to access addURL method.
+//		Method method = URLClassLoader.class.getDeclaredMethod("addURL", new Class[]{URL.class});
+//	    method.setAccessible(true);
+//	    for (String path : classPaths) {
+//	    	method.invoke(ClassLoader.getSystemClassLoader(), new Object[]{new File(path).toURI().toURL()});
+//	    }
+
+		// Add all URL to existing class loader.
+		for (URL url : getClassPaths()) {
+			classLoader.addURL(url);
+		}
+	}
+
+	/**
+	 * Since code loaded by this class loader is user written (hopefully),
+	 * exposing addURL should not be a concern.
+	 */
+	private static final class DynamicClassLoader extends URLClassLoader {
+		public DynamicClassLoader(URL[] urls, ClassLoader parent) {
+			super(urls, parent);
+		}
+
+		/**
+		 * Note that adding a path multiple times is fine since underlying
+		 * implementation treats it as no-op.
+		 */
+		@Override
+		protected void addURL(URL url) {
+			super.addURL(url);
+		}
 	}
 
 	/*******************************************************************/
@@ -308,6 +359,7 @@ public class JavaNativeCompiler extends AbstractNativeCompiler {
 		panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
 		panel.add(new JLabel("It is advisable to restart the program if you remove a path from the class path list."));
 		panel.add(new JLabel("Class paths (1 path per row)"));
+		panel.add(new JLabel("E.g. D:\\path\\to\\dir\\the_jar.jar"));
 
 		JTextArea texts = new JTextArea(StringUtilities.join(classPaths, "\n"));
 		JScrollPane scrollPane = new JScrollPane(texts);
